# elements

./: .gitignore  README.md  pyproject.toml  run-video.sh  run.sh
src/elements/: __init__.py  common_notions.py  postulates.py
src/exer/: curve.py  exer.py
src/util/: __init__.py  scene.py
