[project]
name = "elements"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "lyyyuna", email = "lyyyuna@outlook.com" }
]
dependencies = [
    "manim>=0.18.0",
    "setuptools>=69.2.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/elements"]
